--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -9,54 +9,26 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.madmaxi.bd.MainActivity">
+    tools:context="com.madmaxi.bd.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="1">
+
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        app:srcCompat="@drawable/logo"
         android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" />
+        android:layout_width="295dp"
+        android:layout_height="166dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="25dp"
+        app:srcCompat="@android:drawable/alert_light_frame" />
 
-    <TextView
-        android:text="MadMaxi Jack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:id="@+id/textView"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="349dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0.32"
+        android:ems="10"
+        android:inputType="textMultiLine" />
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:id="@+id/button1"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:id="@+id/button2"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:id="@+id/button3"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true" />
-
-
-</RelativeLayout>
+</LinearLayout>
