--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,10 @@
         android:layout_marginTop="25dp"
         app:srcCompat="@android:drawable/alert_light_frame" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="349dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0.32"
-        android:ems="10"
-        android:inputType="textMultiLine" />
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="330dp"
+        android:layout_height="194dp"
+        android:text="TextView" />
 
 </LinearLayout>
